# test_rust_build

./: Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml
src/: main.rs
